// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`select_reducer renders correctly 1`] = `
Object {
  "errors": undefined,
  "orders": Array [],
}
`;

exports[`select_reducer returns the correct state 1`] = `
Object {
  "errors": Object {},
  "orders": Object {},
}
`;

exports[`select_reducer returns the correct state 2`] = `
Object {
  "errors": Object {},
  "orders": Array [],
}
`;

exports[`select_reducer returns the correct state 3`] = `
Object {
  "errors": Object {},
  "orders": Array [],
}
`;
